--- a/ReversationApp/index.html
+++ b/ReversationApp/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;600;700;400&display=swap"
       rel="stylesheet"
     />
     <style>
