--- a/ReversationApp/index.html
+++ b/ReversationApp/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Trello Booking | Flat 20% OFF on first booking</title>
+    <link
+      rel="shortcut icon"
+      href="./src/assests/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;600;700;400&display=swap"
