--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="./src/assests/favicon-32x32.png"
       type="image/x-icon"
     />
-    <title>Rapid Reversation | Christmas Offer</title>
+    <title>Rapid Reservation | Christmas Offer</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;600;700;400&display=swap"
