--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Trello Booking | Flat 20% OFF on first booking</title>
     <link
       rel="shortcut icon"
-      href="./src/assests/favicon-32x32.png"
+      href="./favicon-32x32.png"
       type="image/x-icon"
     />
     <title>Rapid Reservation | Christmas Offer</title>
