--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     />
     <title>Rapid Reservation | Christmas Offer</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
+<!--     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;600;700;400&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <style>
       body {
         font-family: "Roboto", sans-serif;
