--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Trello Booking | Flat 20% OFF on first booking</title>
-    <link
+    <!-- <link
       rel="shortcut icon"
       href="./favicon-32x32.png"
       type="image/x-icon"
-    />
+    /> -->
     <title>Rapid Reservation | Christmas Offer</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 <!--     <link
